syntax = "proto3";

option java_multiple_files = true;
option java_package = "sirs.remoteDocs";

service DatabaseBackupService {
  rpc sendDatabaseBackup(backupDatabaseRequest) returns (backupDatabaseReply) {};
}

message backupDatabaseRequest {
  bytes sqlBackupFile = 1;
}

message backupDatabaseReply {
  bool backupResponse = 1;
}
